--- a/apps/ios/SimpleX SE/de.lproj/Localizable.strings
+++ b/apps/ios/SimpleX SE/de.lproj/Localizable.strings
@@ -77,10 +77,10 @@
 "Passphrase" = "Passwort";
 
 /* No comment provided by engineer. */
-"Please create a profile in the SimpleX app" = "Bitte erstellen Sie ein Profil in der SimpleX-App";
+"Please create a profile in the SimpleX app" = "Bitte erstellen Sie in der SimpleX-App ein Profil";
 
 /* No comment provided by engineer. */
-"Selected chat preferences prohibit this message." = "Diese Nachricht ist wegen der gewählten Chat-Einstellungen nicht erlaubt.";
+"Selected chat preferences prohibit this message." = "Die gewählten Chat-Einstellungen erlauben diese Nachricht nicht.";
 
 /* No comment provided by engineer. */
 "Sending a message takes longer than expected." = "Das Senden einer Nachricht dauert länger als erwartet.";
