--- a/apps/ios/nl.lproj/Localizable.strings
+++ b/apps/ios/nl.lproj/Localizable.strings
@@ -1158,7 +1158,7 @@ set passcode view */
 /* No comment provided by engineer. */
 "Conditions are already accepted for these operator(s): **%@**." = "Voorwaarden zijn reeds geaccepteerd voor de volgende operator(s): **%@**.";
 
-/* No comment provided by engineer. */
+/* alert button */
 "Conditions of use" = "Gebruiksvoorwaarden";
 
 /* No comment provided by engineer. */
@@ -3437,7 +3437,7 @@ snd error text */
 /* No comment provided by engineer. */
 "Network settings" = "Netwerk instellingen";
 
-/* No comment provided by engineer. */
+/* alert title */
 "Network status" = "Netwerk status";
 
 /* delete after time */
@@ -4123,9 +4123,6 @@ new chat action */
 /* No comment provided by engineer. */
 "received confirmation…" = "bevestiging ontvangen…";
 
-/* notification */
-"Received file event" = "Ontvangen bestandsgebeurtenis";
-
 /* message info title */
 "Received message" = "Ontvangen bericht";
 
@@ -4650,9 +4647,6 @@ chat item action */
 
 /* No comment provided by engineer. */
 "Sent directly" = "Direct verzonden";
-
-/* notification */
-"Sent file event" = "Verzonden bestandsgebeurtenis";
 
 /* message info title */
 "Sent message" = "Verzonden bericht";
@@ -5344,12 +5338,6 @@ report reason */
 "Transport sessions" = "Transportsessies";
 
 /* No comment provided by engineer. */
-"Trying to connect to the server used to receive messages from this contact (error: %@)." = "Proberen verbinding te maken met de server die wordt gebruikt om berichten van dit contact te ontvangen (fout: %@).";
-
-/* No comment provided by engineer. */
-"Trying to connect to the server used to receive messages from this contact." = "Proberen verbinding te maken met de server die wordt gebruikt om berichten van dit contact te ontvangen.";
-
-/* No comment provided by engineer. */
 "Turkish interface" = "Turkse interface";
 
 /* No comment provided by engineer. */
@@ -5816,9 +5804,6 @@ report reason */
 
 /* new chat sheet title */
 "You are already joining the group!\nRepeat join request?" = "Je sluit je al aan bij de groep!\nDeelnameverzoek herhalen?";
-
-/* No comment provided by engineer. */
-"You are connected to the server used to receive messages from this contact." = "U bent verbonden met de server die wordt gebruikt om berichten van dit contact te ontvangen.";
 
 /* No comment provided by engineer. */
 "You are invited to group" = "Je bent uitgenodigd voor de groep";
