--- a/apps/ios/ru.lproj/Localizable.strings
+++ b/apps/ios/ru.lproj/Localizable.strings
@@ -1191,7 +1191,7 @@ set passcode view */
 /* No comment provided by engineer. */
 "Conditions are already accepted for these operator(s): **%@**." = "Условия уже приняты для следующих оператора(ов): **%@**.";
 
-/* No comment provided by engineer. */
+/* alert button */
 "Conditions of use" = "Условия использования";
 
 /* No comment provided by engineer. */
@@ -2586,7 +2586,7 @@ snd error text */
 "Fingerprint in server address does not match certificate: %@." = "Хэш в адресе сервера не соответствует сертификату: %@.";
 
 /* server test error */
-"Fingerprint in server address does not match certificate." = "Возможно, хэш сертификата в адресе сервера неверный";
+"Fingerprint in server address does not match certificate." = "Возможно, хэш сертификата в адресе сервера неверный.";
 
 /* No comment provided by engineer. */
 "Fix" = "Починить";
@@ -3531,7 +3531,7 @@ snd error text */
 "Name" = "Имя";
 
 /* No comment provided by engineer. */
-"Network & servers" = "Сеть & серверы";
+"Network & servers" = "Сеть и серверы";
 
 /* No comment provided by engineer. */
 "Network connection" = "Интернет-соединение";
@@ -3551,7 +3551,7 @@ snd error text */
 /* No comment provided by engineer. */
 "Network settings" = "Настройки сети";
 
-/* No comment provided by engineer. */
+/* alert title */
 "Network status" = "Состояние сети";
 
 /* delete after time */
@@ -4279,9 +4279,6 @@ new chat action */
 /* No comment provided by engineer. */
 "received confirmation…" = "получено подтверждение…";
 
-/* notification */
-"Received file event" = "Загрузка файла";
-
 /* message info title */
 "Received message" = "Полученное сообщение";
 
@@ -4552,7 +4549,7 @@ swipe action */
 "Review members" = "Одобрять членов";
 
 /* admission stage description */
-"Review members before admitting (\"knocking\")." = "Одобрять членов для вступления в группу.";
+"Review members before admitting (\"knocking\")." = "Вручную одобрять членов для вступления в группу.";
 
 /* No comment provided by engineer. */
 "reviewed by admins" = "одобрен админами";
@@ -4843,9 +4840,6 @@ chat item action */
 /* No comment provided by engineer. */
 "Sent directly" = "Отправлено напрямую";
 
-/* notification */
-"Sent file event" = "Отправка файла";
-
 /* message info title */
 "Sent message" = "Отправленное сообщение";
 
@@ -4892,10 +4886,10 @@ chat item action */
 "server queue info: %@\n\nlast received msg: %@" = "информация сервера об очереди: %1$@\n\nпоследнее полученное сообщение: %2$@";
 
 /* server test error */
-"Server requires authorization to create queues, check password." = "Сервер требует авторизации для создания очередей, проверьте пароль";
+"Server requires authorization to create queues, check password." = "Сервер требует авторизации для создания очередей, проверьте пароль.";
 
 /* server test error */
-"Server requires authorization to upload, check password." = "Сервер требует авторизации для загрузки, проверьте пароль";
+"Server requires authorization to upload, check password." = "Сервер требует авторизации для загрузки, проверьте пароль.";
 
 /* No comment provided by engineer. */
 "Server test failed!" = "Ошибка теста сервера!";
@@ -5284,7 +5278,7 @@ report reason */
 "Tap Connect to send request" = "Нажмите Соединиться, чтобы отправить запрос";
 
 /* No comment provided by engineer. */
-"Tap Connect to use bot" = "Нажмите Соединиться, чтобы использовать бот.";
+"Tap Connect to use bot" = "Нажмите Соединиться, чтобы использовать бот";
 
 /* No comment provided by engineer. */
 "Tap Create SimpleX address in the menu to create it later." = "Нажмите Создать адрес SimpleX в меню, чтобы создать его позже.";
@@ -5588,12 +5582,6 @@ report reason */
 
 /* No comment provided by engineer. */
 "Transport sessions" = "Транспортные сессии";
-
-/* No comment provided by engineer. */
-"Trying to connect to the server used to receive messages from this contact (error: %@)." = "Устанавливается соединение с сервером, через который Вы получаете сообщения от этого контакта (ошибка: %@).";
-
-/* No comment provided by engineer. */
-"Trying to connect to the server used to receive messages from this contact." = "Устанавливается соединение с сервером, через который Вы получаете сообщения от этого контакта.";
 
 /* No comment provided by engineer. */
 "Turkish interface" = "Турецкий интерфейс";
@@ -6086,9 +6074,6 @@ report reason */
 
 /* new chat sheet title */
 "You are already joining the group!\nRepeat join request?" = "Вы уже вступаете в группу!\nПовторить запрос на вступление?";
-
-/* No comment provided by engineer. */
-"You are connected to the server used to receive messages from this contact." = "Установлено соединение с сервером, через который Вы получаете сообщения от этого контакта.";
 
 /* No comment provided by engineer. */
 "You are invited to group" = "Вы приглашены в группу";
