--- a/apps/ios/es.lproj/Localizable.strings
+++ b/apps/ios/es.lproj/Localizable.strings
@@ -1191,7 +1191,7 @@ set passcode view */
 /* No comment provided by engineer. */
 "Conditions are already accepted for these operator(s): **%@**." = "Las condiciones ya se han aceptado para el/los siguiente(s) operador(s): **%@**.";
 
-/* No comment provided by engineer. */
+/* alert button */
 "Conditions of use" = "Condiciones de uso";
 
 /* No comment provided by engineer. */
@@ -2266,7 +2266,7 @@ chat item action */
 "Error decrypting file" = "Error al descifrar el archivo";
 
 /* alert title */
-"Error deleting chat" = "Error al eliminar el chat con el miembro";
+"Error deleting chat" = "Error al eliminar el chat";
 
 /* alert title */
 "Error deleting chat database" = "Error al eliminar base de datos";
@@ -2438,6 +2438,9 @@ file error text
 snd error text */
 "Error: %@" = "Error: %@";
 
+/* server test error */
+"Error: %@." = "Error: %@.";
+
 /* No comment provided by engineer. */
 "Error: no database file" = "Error: sin archivo de base de datos";
 
@@ -2573,8 +2576,17 @@ snd error text */
 /* No comment provided by engineer. */
 "Find chats faster" = "Encuentra chats mas rápido";
 
+/* No comment provided by engineer. */
+"Fingerprint in destination server address does not match certificate: %@." = "La huella en la dirección del servidor de destino no coincide con el certificado: %@.";
+
+/* No comment provided by engineer. */
+"Fingerprint in forwarding server address does not match certificate: %@." = "La huella en la dirección del servidor de reenvío no coincide con el certificado: %@.";
+
+/* No comment provided by engineer. */
+"Fingerprint in server address does not match certificate: %@." = "La huella en la dirección del servidor no coincide con el certificado: %@.";
+
 /* server test error */
-"Fingerprint in server address does not match certificate." = "Posiblemente la huella del certificado en la dirección del servidor es incorrecta";
+"Fingerprint in server address does not match certificate." = "La huella en la dirección del servidor no coincide con el certificado.";
 
 /* No comment provided by engineer. */
 "Fix" = "Reparar";
@@ -3539,7 +3551,7 @@ snd error text */
 /* No comment provided by engineer. */
 "Network settings" = "Configuración de red";
 
-/* No comment provided by engineer. */
+/* alert title */
 "Network status" = "Estado de la red";
 
 /* delete after time */
@@ -4267,9 +4279,6 @@ new chat action */
 /* No comment provided by engineer. */
 "received confirmation…" = "confirmación recibida…";
 
-/* notification */
-"Received file event" = "Evento de archivo recibido";
-
 /* message info title */
 "Received message" = "Mensaje entrante";
 
@@ -4831,9 +4840,6 @@ chat item action */
 /* No comment provided by engineer. */
 "Sent directly" = "Directamente";
 
-/* notification */
-"Sent file event" = "Evento de archivo enviado";
-
 /* message info title */
 "Sent message" = "Mensaje saliente";
 
@@ -4880,10 +4886,10 @@ chat item action */
 "server queue info: %@\n\nlast received msg: %@" = "información cola del servidor: %1$@\n\núltimo mensaje recibido: %2$@";
 
 /* server test error */
-"Server requires authorization to create queues, check password." = "El servidor requiere autorización para crear colas, comprueba la contraseña";
+"Server requires authorization to create queues, check password." = "El servidor requiere autorización para crear colas, comprueba la contraseña.";
 
 /* server test error */
-"Server requires authorization to upload, check password." = "El servidor requiere autorización para subir, comprueba la contraseña";
+"Server requires authorization to upload, check password." = "El servidor requiere autorización para subir, comprueba la contraseña.";
 
 /* No comment provided by engineer. */
 "Server test failed!" = "¡Prueba no superada!";
@@ -5578,12 +5584,6 @@ report reason */
 "Transport sessions" = "Sesiones de transporte";
 
 /* No comment provided by engineer. */
-"Trying to connect to the server used to receive messages from this contact (error: %@)." = "Intentando conectar con el servidor usado para recibir mensajes de este contacto (error: %@).";
-
-/* No comment provided by engineer. */
-"Trying to connect to the server used to receive messages from this contact." = "Intentando conectar con el servidor usado para recibir mensajes de este contacto.";
-
-/* No comment provided by engineer. */
 "Turkish interface" = "Interfaz en turco";
 
 /* No comment provided by engineer. */
@@ -6076,9 +6076,6 @@ report reason */
 "You are already joining the group!\nRepeat join request?" = "¡En proceso de unirte al grupo!\n¿Repetir solicitud de admisión?";
 
 /* No comment provided by engineer. */
-"You are connected to the server used to receive messages from this contact." = "Estás conectado al servidor usado para recibir mensajes de este contacto.";
-
-/* No comment provided by engineer. */
 "You are invited to group" = "Has sido invitado a un grupo";
 
 /* No comment provided by engineer. */
@@ -6334,7 +6331,7 @@ report reason */
 "Your profile is stored on your device and only shared with your contacts." = "El perfil sólo se comparte con tus contactos.";
 
 /* No comment provided by engineer. */
-"Your profile is stored on your device and shared only with your contacts. SimpleX servers cannot see your profile." = "Tu perfil se almacena en tu dispositivo y sólo se comparte con tus contactos. Los servidores SimpleX no pueden ver tu perfil.";
+"Your profile is stored on your device and shared only with your contacts. SimpleX servers cannot see your profile." = "Tu perfil se almacena en tu dispositivo y se comparte sólo con tus contactos. Los servidores SimpleX no pueden ver tu perfil.";
 
 /* alert message */
 "Your profile was changed. If you save it, the updated profile will be sent to all your contacts." = "Tu perfil ha sido modificado. Si lo guardas la actualización será enviada a todos tus contactos.";
